@@ -1,5 +1,8 @@
 2000-06-26  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
 
+	* lib/Majordomo.pm (createlist): Return values were done
+	improperly for some reason.
+
 	* lib/Mj/BounceParser.pm: Renamed from Bf/Parser.pm.
 
 2000-06-25  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
